# SkinCut

./: .gitignore  BUILDING.md  Build.bat  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Resources/: Config.json  Scene.json
Shaders/: Decal.ps.hlsl  Falloff.ps.hlsl  Patch.ps.hlsl  Phong.ps.hlsl  Stretch.vs.hlsl  Subsurface.ps.hlsl
SkinCut/: SkinCut.vcxproj  SkinCut.vcxproj.filters  imgui.ini
SkinCut/Resources/: Config.json  Scene.json
SkinCut/Shaders/: Discolor.ps.hlsl  Lambert.ps.hlsl  Lambert.vs.hlsl  Main.ps.hlsl  Main.vs.hlsl  Pass.vs.hlsl  Phong.vs.hlsl  Stretch.ps.hlsl  Subsurface.ps.hlsl  Wound.ps.hlsl
SkinCut/Source/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Cutter.cpp  Cutter.hpp  Dashboard.cpp  Dashboard.hpp  Decal.cpp  Decal.hpp  Entity.cpp  Entity.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Generator.cpp  Generator.hpp  Hash.cpp  Hash.hpp  Interface.cpp  Interface.hpp  Light.cpp  Light.hpp  Main.cpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Stopwatch.cpp  Stopwatch.hpp  Structs.cpp  Structs.hpp  Structures.hpp  (+8 more)
Source/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Constants.hpp  Cutter.cpp  Cutter.hpp  Decal.cpp  Decal.hpp  FrameBuffer.cpp  FrameBuffer.hpp  Generator.cpp  Generator.hpp  Hash.cpp  Hash.hpp  Interface.cpp  Interface.hpp  Light.cpp  Light.hpp  Main.cpp  Math.cpp  Math.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  Stopwatch.cpp  Stopwatch.hpp  Structs.cpp  Tester.cpp  Tester.hpp  Texture.cpp  (+6 more)
